--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi
-uvicorn
-jinja2
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic>=2.7,<3
+python-dotenv>=1.0,<2
+jinja2>=3.1,<4
 numpy
 scikit-learn
 torch
@@ -14,4 +16,3 @@ seaborn
 nbformat
 nbconvert
 plotly
-dotenv
